New update for my project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="descripiton" content="???" />
     <meta name="Antonio Vazquez" content="???" />
     <meta name="keywords" content="HTML, CSS, ???" />
-    <link rel="stylesheet" href="vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>Spots</title>
@@ -76,9 +75,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">
-                  A very long bridge, over the forest...
-                </h2>
+                <h2 class="card__title">A very long bridge, over the forest</h2>
                 <button type="button" class="card__like-button"></button>
               </div>
             </li>
