--- a/index.html
+++ b/index.html
@@ -107,6 +107,35 @@
       <footer class="footer">
         <p class="footer__copyright">2023 &copy; Spots</p>
       </footer>
+      <div class="modal modal_opened">
+        <div class="modal__container">
+          <button type="submit" class="modal__close-btn">
+            <img src="./images/Close Icon.svg" alt="X" />
+          </button>
+          <h2 class="modal__title">Edit Profile</h2>
+          <form name="edit-profile" class="modal__form">
+            <label for="name" class="modal__label">
+              Name
+              <input
+                id="name"
+                type="text"
+                class="modal__input"
+                placeholder="Name"
+              />
+            </label>
+            <label for="descripiton" class="modal__label">
+              Description
+              <input
+                id="descripiton"
+                type="text"
+                class="modal__input"
+                placeholder="Describe Yourself"
+              />
+            </label>
+            <button type="submit" class="modal__sumbit-btn">Save</button>
+          </form>
+        </div>
+      </div>
     </div>
     <script defer src="./scripts/index.js"></script>
   </body>
