New update for my project

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">
-            <img src="./images/Close Icon.svg" alt="Close button" />
+            <img src="./images/Closeicon.svg" alt="Close button" />
           </button>
           <h2 class="modal__title">Edit Profile</h2>
           <form name="edit-profile" class="modal__form">
