New update for my project

--- a/index.html
+++ b/index.html
@@ -123,12 +123,8 @@
         <button type="button" class="modal__close-btn">
           <img src="./images/CloseIcon.svg" alt="Close button" />
         </button>
-        <img
-          src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/7-photo-by-griffin-wooldridge-from-pexels.jpg"
-          alt=""
-          class="modal__image"
-        />
-        <p class="modal__caption">Golden Gate Bridge</p>
+        <img src="" alt="" class="modal__image" />
+        <p class="modal__caption"></p>
       </div>
     </div>
 
