--- a/index.html
+++ b/index.html
@@ -119,9 +119,11 @@
     </div>
 
     <div class="modal" id="preview-modal">
-      <div class="modal__container modal__container_type_preview">
+      <div
+        class="modal__container modal__container_type_preview modal__close-btn_type_preview"
+      >
         <button type="button" class="modal__close-btn">
-          <img src="./images/CloseIcon.svg" alt="Close button" />
+          <img src="./images/Close Icon.svg" alt="Close button" />
         </button>
         <img src="" alt="" class="modal__image" />
         <p class="modal__caption"></p>
