New update for my project

--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
       </footer>
       <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
-          <button type="button" class="modal__close-btn">
-            <img src="./images/CloseIcon.svg" alt="Close button" />
-          </button>
+          <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit Profile</h2>
           <form name="edit-profile" class="modal__form">
             <label for="profile-name-input" class="modal__label">
@@ -87,9 +85,7 @@
       </div>
       <div class="modal" id="add-card-modal">
         <div class="modal__container">
-          <button type="button" class="modal__close-btn">
-            <img src="./images/CloseIcon.svg" alt="Close button" />
-          </button>
+          <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New Post</h2>
           <form name="cardForm" class="modal__form">
             <label for="card-url-input" class="modal__label">
@@ -119,12 +115,11 @@
     </div>
 
     <div class="modal" id="preview-modal">
-      <div
-        class="modal__container modal__container_type_preview modal__close-btn_type_preview"
-      >
-        <button type="button" class="modal__close-btn">
-          <img src="./images/Close Icon.svg" alt="Close button" />
-        </button>
+      <div class="modal__container modal__container_type_preview">
+        <button
+          type="button"
+          class="modal__close-btn modal__close-btn_type_preview"
+        ></button>
         <img src="" alt="" class="modal__image" />
         <p class="modal__caption"></p>
       </div>
