New update for my project

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit Profile</h2>
           <form name="edit-profile" class="modal__form">
-            <label for="profile-name-input" class="modal__label">
+            <label
+              for="profile-name-input"
+              class="modal__label modal__profile-name"
+            >
               Name
               <input
                 id="profile-name-input"
