--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <img src="./images/Pencil.svg" alt="Pencil icon" />Edit Profile
             </button>
           </div>
-          <button type="button" class="profile__add-button">
+          <button type="button" class="profile__add-btn">
             <img src="./images/Plus.svg" alt="Plus icon" /> New Post
           </button>
         </section>
@@ -38,7 +38,11 @@
             <template id="card-template">
               <li class="card">
                 <button class="card__delete-button" type="button"></button>
-                <img src="" alt="" class="card__image" />
+                <img
+                  src="./images/CloseIcon.svg"
+                  alt="close-btn"
+                  class="card__image"
+                />
                 <div class="card__content">
                   <h2 class="card__title"></h2>
                   <button
@@ -58,7 +62,7 @@
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit Profile</h2>
-          <form name="edit-profile" class="modal__form">
+          <form name="edit-profile" class="modal__form" novalidate>
             <label
               for="profile-name-input"
               class="modal__label modal__profile-name"
@@ -69,8 +73,11 @@
                 type="text"
                 class="modal__input"
                 placeholder="Type your name"
+                minlength="2"
+                maxlength="40"
                 required
               />
+              <span id="profile-name-input-error" class="modal__error"></span>
             </label>
             <label for="profile-description-input" class="modal__label">
               Description
@@ -79,10 +86,16 @@
                 type="text"
                 class="modal__input"
                 placeholder="Describe Yourself"
+                minlength="2"
+                maxlength="200"
                 required
               />
+              <span
+                id="profile-description-input-error"
+                class="modal__error"
+              ></span>
             </label>
-            <button type="submit" class="modal__button">Save</button>
+            <button type="submit" class="modal__submit-btn">Save</button>
           </form>
         </div>
       </div>
@@ -90,7 +103,7 @@
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New Post</h2>
-          <form name="cardForm" class="modal__form">
+          <form name="cardForm" class="modal__form" novalidate>
             <label for="card-url-input" class="modal__label">
               Image link
               <input
@@ -100,18 +113,22 @@
                 placeholder="Paste a link to the picture"
                 required
               />
+              <span id="card-url-input-error" class="modal__error"></span>
             </label>
-            <label for="card-title-input" class="modal__label">
+            <label for="card-caption-input" class="modal__label">
               Caption
               <input
-                id="card-title-input"
+                id="card-caption-input"
                 type="text"
                 class="modal__input"
                 placeholder="Type your caption"
+                minlength="2"
+                maxlength="30"
                 required
               />
+              <span id="card-caption-input-error" class="modal__error"></span>
             </label>
-            <button type="submit" class="modal__button">Create</button>
+            <button type="submit" class="modal__submit-btn">Create</button>
           </form>
         </div>
       </div>
@@ -129,5 +146,6 @@
     </div>
 
     <script defer src="./scripts/index.js"></script>
+    <script src="./scripts/validation.js"></script>
   </body>
 </html>
