New update for my project

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="descripiton" content="???" />
+    <meta name="description" content="???" />
     <meta name="Antonio Vazquez" content="???" />
     <meta name="keywords" content="HTML, CSS, ???" />
     <link rel="stylesheet" href="./pages/index.css" />
@@ -140,7 +140,7 @@
           type="button"
           class="modal__close-btn modal__close-btn_type_preview"
         ></button>
-        <img src="#" alt="" class="modal__image" />
+        <img src="#" alt="button" class="modal__image" />
         <p class="modal__caption"></p>
       </div>
     </div>
