New update for my project

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           type="button"
           class="modal__close-btn modal__close-btn_type_preview"
         ></button>
-        <img src="#" alt="button" class="modal__image" />
+        <img src="#" alt="button-image" class="modal__image" />
         <p class="modal__caption"></p>
       </div>
     </div>
